--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@noble/hashes": "^1.4.0",
+    "@noble/secp256k1": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.1.4",
     "@tanstack/react-query": "^5.51.11",
+    "bip39": "^3.1.0",
+    "crypto-js": "^4.2.0",
+    "ethereumjs-wallet": "^1.0.2",
     "next": "^14.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
